# MailGen

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  notebook.ipynb  requirements.in  requirements.txt
access/: BUILD.bazel  dois.toml  lib.py  main.py
